Fixed several errors pointed by FindBugs.